--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.9"
 services:
   redis:
-    image: "redis/redis-stack:edge"
+    image: "redislabs/redis-stack:edge"
     ports:
       - "6379:6379"
-    environment:
-      - "REDIS_ARGS=--appendonly yes"
+      - "8001:8001"
     volumes:
       - ./data:/data
     deploy:
