--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#
+spring.data.redis.host=redis-19401.c277.us-east-1-3.ec2.cloud.redislabs.com
+spring.data.redis.port=19401
+spring.data.redis.password=sDNgA8DE8QCHeM3PtjP98TeWfqTvVRjK
+spring.data.redis.timeout=60000
